Replace Collections.toList() with toList() method